Sat Dec 21 20:32:40 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * New option --captions-path. Specify a path (relative to each image) to a
    directory with captions in and feh will overlay them on the image. It even
    does text wrapping and centering!
    Example, run feh --captions-path captions testimages
    for image testimages/donna1.jpg, feh will look for a caption in
    testimages/captions/donna1.jpg.txt
  * This feature was requested by David Blackman <david@whizziwig.com>

Thu Dec 19 23:09:19 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed bug - segv when last image in slideshow is deleted.

Thu Dec 05 16:04:24 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 1.2.3

Thu Dec 05 03:32:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Got rid of black background for the "draw filename" and zoom display
    texts. Added a dropshadow to aid visibility when there's no contrast
    against the background.

Thu Dec 05 01:28:44 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Keyboard control for menus :)
  * Press 'm' to open the menu, escape to close it, arrow keys (or hjkl) to
    navigate and space or enter to activate.

Wed Dec 04 23:12:44 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Changed the way the menus work - you don't have to hold the mouse button
    down to keep them open any more. I prefer the old way but that way doesn't
    allow keyboard menu control.

Wed Dec 04 21:30:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Found a couple of case statements without breaks in options.c
  * New default menu, tweaked the menus a little, added code to specify the
    menu bg image border and let the user tweak it.

Sun Nov 24 22:47:43 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Daniel Ashbrook <anjiro@cc.gatech.edu> to bind a key (v) to
    switching between window and fullscreen mode

Sun Oct 20 22:45:01 2002 EDT, Paul Duncan <pabs@pablotron.org>
