@@ -5,7 +5,7 @@ FEH="./feh"
 FEH="feh"
 }
 echo ""
-echo "This should invoke a fullscreen slideshow"
+echo "This should invoke a fullscreen slideshow with captions"
 echo ""
 $FEH $1 -F --caption-path captions testimages
 echo ""
