@@ -1,3 +1,11 @@
+Sun Dec 22 13:50:16 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Fixed wrapping for long lines with no spaces
+  * Caption editing, also requested by David Blackman <david@whizziwig.com>
+    Hit 'c', edit caption, enter to confirm the changes or Escape to revert.
+    (Only when --captions-path has been specified).
+  * Spotted a couple of minor bugs as I went through stuff, fixed those two.
+
 Sat Dec 21 20:32:40 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * New option --captions-path. Specify a path (relative to each image) to a
